# DuckOS

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: compile_kernel.yml  cppcheck.yml  unit_tests.yml  valgrind.yml
dstd/: CMakeLists.txt
dstd/include/dstd/: array.hpp  assert.hpp  cassert.hpp  concepts.hpp  cstdint.hpp  cstdlib.hpp  cstring.hpp  expected.hpp  map.hpp  optional.hpp  ref.hpp  span.hpp  string.hpp  tuple.hpp  type_traits.hpp  unique_ptr.hpp  utility.hpp  vector.hpp
dstd/include/dstd/impl/: storage.hpp
dstd/include/dstd/type_traits/: base.hpp  enable_if.hpp  is_array.hpp  is_integral.hpp  is_same.hpp  is_void.hpp  qualifiers.hpp  references.hpp
dstd/src/: assert.cpp  cassert.cpp  cstring.cpp  string.cpp
include/: io.hpp  vga.hpp
include/dstd/: cassert.hpp  cstdint.hpp  cstring.hpp  string.hpp  type_traits.hpp  utility.hpp
kernel/: CMakeLists.txt
kernel/include/: heap.hpp  idt.hpp  interrupts.hpp  io.hpp  keyboard.hpp  keycodes.hpp  log.hpp  main.hpp  memory.hpp  multiboot2.hpp  paging.hpp  serial.hpp  syscalls.hpp  utility.hpp  vga.hpp
kernel/include/acpi/: apic.hpp  ioapic.hpp  madt.hpp  madt_entries.hpp  rsdt.hpp
kernel/include/cursed/: apic.hpp
kernel/include/memory/: helpers.hpp  manager.hpp  page_entry.hpp  paging.hpp  phys_addr.hpp  phys_alloc.hpp  pml1t.hpp  pml2t.hpp  virt_addr.hpp
kernel/src/: heap.cpp  idt.cpp  interrupts.cpp  keyboard.cpp  log.cpp  main.cpp  memory.cpp  multiboot2.cpp  paging.cpp  serial.cpp  syscalls.cpp  utility.cpp  vga.cpp
kernel/src/acpi/: apic.cpp  madt.cpp  rsdt.cpp
kernel/src/asm/: gdt.asm  interrupts.asm  linker.ld  paging.asm  start.asm  syscalls.asm
kernel/src/cursed/: apic.cpp  rsdt.cpp
kernel/src/memory/: helpers.cpp  manager.cpp  page_entry.cpp  paging.cpp  phys_addr.cpp  phys_alloc.cpp  pml1t.cpp  virt_addr.cpp
scripts/: bochs.conf  build-image.sh  debug-qemu-image.sh  debug-qemu-kernel.sh  gdb-helpers.gdb  grub.cfg  run-bochs-image.sh  run-qemu-image.sh  run-qemu-kernel.sh
src/: main.cpp  memory.cpp  serial.cpp  vga.cpp
src/asm/: linker.ld  paging.asm  start.asm
src/dstd/: cstring.cpp  string.cpp
tests/: CMakeLists.txt  test.cpp
tests/dstd/: array.cpp  cstdlib.cpp  cstring.cpp  expected.cpp  map.cpp  optional.cpp  string.cpp  tuple.cpp  unique_ptr.cpp  vector.cpp
